--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
     "react-test-renderer": "16.8.3",
+    "tslint": "^5.16.0",
+    "tslint-react": "^4.0.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^8.0.1",
     "typescript": "^3.4.5"
   },
   "jest": {
