--- a/src/config/app.json
+++ b/src/config/app.json
@@ -1,4 +1,5 @@
 {
   "name": "myapp",
-  "displayName": "myapp"
+  "displayName": "myapp",
+  "baseUrl" : "https://rallycoding.herokuapp.com/api/music_albums"
 }
